# PlatinumMedia

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_about.xml  activity_audio.xml  activity_image.xml  activity_main.xml  activity_settings.xml  activity_simple.xml  activity_video.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: app_settings.xml
client/: build.gradle
client/src/main/: AndroidManifest.xml
client/src/main/res/layout/: activity_splash.xml
client/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
platinum/: build.gradle
platinum/src/main/: AndroidManifest.xml
platinum/src/main/cpp/: CMakeLists.txt  CallbackTypes.h  DLNABridge.cpp  DLNABridge.h  DLNAServer.cpp  DLNAServer.h  MediaCallback.cpp  MediaCallback.h  MediaRenderer.cpp  MediaRenderer.h  NdkLogger.h  PlatinumApi.cpp  PlatinumApi.h  platinum-jni.cpp  platinum-jni.h
platinum/src/main/cpp/Hupnp/: AndUPnP.cpp  AndUPnP.h  NdkHelper.cpp  NdkHelper.h
platinum/src/main/cpp/Neptune/Core/: NptHttp.cpp  NptLogging.cpp  NptTls.cpp  NptUtils.cpp
platinum/src/main/cpp/Neptune/System/Bsd/: NptBsdSockets.cpp
platinum/src/main/cpp/Neptune/System/Posix/: NptPosixQueue.cpp  NptPosixThreads.cpp
platinum/src/main/cpp/Neptune/System/StdC/: NptStdcEnvironment.cpp
server/: build.gradle
server/src/main/: AndroidManifest.xml
(+52 files in other folders)
